--- a/src/docs/asciidoc/post-api.adoc
+++ b/src/docs/asciidoc/post-api.adoc
@@ -4,24 +4,24 @@
 [[Post-게시글-리스트-조회]]
 === 게시글 리스트 조회
 
-operation::post_controller_test/should-get-first10-post-item-page-when-no-query-parameter[snippets='curl-request,http-request,http-response']
+operation::post_controller_test/should-get-first10-post-item-page-when-no-query-parameter[snippets='curl-request,query-parameters,http-request,http-response']
 
 [[Post-게시글-생성]]
 === 게시글 생성
 
-operation::post_controller_test/should-create-post-when-is-logged-in-with-valid-request[snippets='curl-request,http-request,http-response']
+operation::post_controller_test/should-create-post-when-is-logged-in[snippets='curl-request,http-request,form-parameters,http-response']
 
 [[Post-단일-조회]]
 === 단일 조회
 
-operation::post_controller_test/should-get-post-detail-when-is-exist[snippets='curl-request,http-request,http-response']
+operation::post_controller_test/should-get-post-detail-when-is-exist[snippets='curl-request,path-parameters,http-request,http-response']
 
 [[Post-게시글-수정]]
 === 게시글 수정
 
-operation::post_controller_test/should-update-post-when-is-owner-and-valid-request[snippets='curl-request,http-request,http-response']
+operation::post_controller_test/should-update-post-when-is-owner[snippets='curl-request,path-parameters,http-request,form-parameters,http-response']
 
 [[Post-게시글-삭제]]
 === 게시글 삭제
 
-operation::post_controller_test/should-delete-post-when-is-owner[snippets='curl-request,http-request,http-response']
+operation::post_controller_test/should-delete-post-when-is-owner[snippets='curl-request,path-parameters,http-request,http-response']
