Docs #35 - file-api.adoc 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -11,3 +11,4 @@ include::auth-api.adoc[]
 include::member-api.adoc[]
 include::post-api.adoc[]
 include::comment-api.adoc[]
+include::file-api.adoc[]
