Docs #35 - ErrorCode Section 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -12,3 +12,4 @@ include::member-api.adoc[]
 include::post-api.adoc[]
 include::comment-api.adoc[]
 include::file-api.adoc[]
+include::error-code.adoc[]
