Refactor #35 - Rest Docs Test 중복 코드 제거

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -7,9 +7,9 @@ Andy Wilkinson;
 :toclevels: 2
 :sectlinks:
 
+include::overview.adoc[]
 include::auth-api.adoc[]
 include::member-api.adoc[]
 include::post-api.adoc[]
 include::comment-api.adoc[]
 include::file-api.adoc[]
-include::error-code.adoc[]
