--- a/src/docs/asciidoc/overview.adoc
+++ b/src/docs/asciidoc/overview.adoc
@@ -1,19 +1,6 @@
 [[overview]]
 == Overview
 
-[[overview-host]]
-=== Host
-
-|===
-| 환경 | Host
-
-| Beta
-| `beta-backtony.github.io`
-
-| Production
-| `backtony.github.io`
-|===
-
 [[overview-http-status-codes]]
 === HTTP status codes
 
@@ -59,3 +46,5 @@ operation::common_doc_controller_test/validation-error-sample[snippets='http-res
 ==== 전역 에러 ( 유효성 검증 제외 )
 
 operation::common_doc_controller_test/global-exception-sample[snippets='http-response,response-fields']
+
+include::error-code.adoc[]
